--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -3,14 +3,27 @@
     "version": "1.0.0",
     "type": "module",
     "scripts": {
-        "dev": "node --no-warnings --experimental-transform-types --watch src/index.ts"
+        "dev": "node --no-warnings --experimental-transform-types --watch src/http/server.ts"
     },
     "dependencies": {
-        "@saas-rbac/auth": "workspace:*"
+        "@fastify/cors": "^11.1.0",
+        "@fastify/swagger": "^9.5.2",
+        "@fastify/swagger-ui": "^5.2.3",
+        "@prisma/client": "6.16.3",
+        "@saas-rbac/auth": "workspace:*",
+        "bcryptjs": "^3.0.2",
+        "fastify": "^5.6.1",
+        "fastify-type-provider-zod": "^6.0.0",
+        "zod": "^4.1.11"
     },
     "devDependencies": {
+        "@faker-js/faker": "^10.0.0",
         "@saas-rbac/eslint-config": "workspace:*",
         "@saas-rbac/ts-config": "workspace:*",
-        "@types/node": "^24.6.2"
+        "@types/node": "^24.6.2",
+        "prisma": "^6.16.3"
+    },
+    "prisma": {
+        "seed": "node --no-warnings --experimental-transform-types prisma/seed.ts"
     }
 }
